fix: NPE in getTodayEntry when no mood entry exists
Map.of() does not accept null values. Use Collections.singletonMap
when entry is absent.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>